[gd_scene load_steps=11 format=3 uid="uid://cjfg2wawo5jqu"]

[ext_resource type="Texture2D" uid="uid://epj3j6l2w24v" path="res://102. Icons/Assets/Uhrwerk EP.png" id="1_ssc31"]
[ext_resource type="Script" path="res://102. Icons/Scripts/uhr.gd" id="2_ndqkg"]
[ext_resource type="Script" path="res://102. Icons/Scripts/uhr_ursprung.gd" id="3_cvyup"]
[ext_resource type="Texture2D" uid="uid://dky12fuehd7p3" path="res://102. Icons/Assets/Uhrzeiger EP.png" id="4_qp0wn"]
[ext_resource type="Texture2D" uid="uid://dspsl73s284ea" path="res://102. Icons/Assets/TrashcanIcons EP.png" id="5_h82uk"]
[ext_resource type="Texture2D" uid="uid://cg8e1vaew0ymm" path="res://102. Icons/Assets/CaughtfishIcons EP.png" id="6_ehjca"]
[ext_resource type="Texture2D" uid="uid://b3m3cajogaho8" path="res://icon.svg" id="7_xsukq"]
[ext_resource type="Script" path="res://102. Icons/sprite_2d.gd" id="8_a6etw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8yb0w"]
texture = ExtResource("7_xsukq")
region_rect = Rect2(12, 9, 103, 107)

[sub_resource type="Theme" id="Theme_2o8qh"]
Panel/styles/panel = SubResource("StyleBoxTexture_8yb0w")

[node name="Node2D" type="Node2D"]

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.842184, 0.575785, 1)
offset_left = 382.0
offset_top = 365.0
offset_right = 869.0
offset_bottom = 392.0
max_value = 500.0
step = 1.0
value = 92.0

[node name="Uhr" type="Sprite2D" parent="."]
position = Vector2(1056, 93)
scale = Vector2(0.433696, 0.433696)
texture = ExtResource("1_ssc31")
script = ExtResource("2_ndqkg")

[node name="UhrUrsprung" type="Node2D" parent="Uhr"]
position = Vector2(1, -1)
rotation = -0.00200354
script = ExtResource("3_cvyup")

[node name="UhrzeigerEp" type="Sprite2D" parent="Uhr/UhrUrsprung"]
position = Vector2(-0.886261, -56.646)
texture = ExtResource("4_qp0wn")

[node name="Timer" type="Timer" parent="Uhr"]
wait_time = 0.01
autostart = true

[node name="TrashcanIconsEp" type="Sprite2D" parent="."]
position = Vector2(63, 68)
scale = Vector2(0.52, 0.52)
texture = ExtResource("5_h82uk")
hframes = 2
vframes = 2
region_filter_clip_enabled = true

[node name="Timer" type="Timer" parent="TrashcanIconsEp"]
wait_time = 0.01
autostart = true

[node name="CaughtfishIconsEp" type="Sprite2D" parent="."]
position = Vector2(60, 241)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_ehjca")
hframes = 2
vframes = 2

[node name="Button" type="Button" parent="."]
offset_left = 74.0
offset_top = 812.0
offset_right = 248.0
offset_bottom = 872.0

[node name="Button" type="Button" parent="Button"]
layout_mode = 0
offset_left = 152.0
offset_top = 514.0
offset_right = 326.0
offset_bottom = 574.0
theme = SubResource("Theme_2o8qh")

[node name="Label" type="Label" parent="."]
offset_left = 923.0
offset_top = 241.0
offset_right = 1130.0
offset_bottom = 312.0
text = "sdfsdfsdf"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(170, 455)
texture = ExtResource("7_xsukq")
script = ExtResource("8_a6etw")

[connection signal="timeout" from="Uhr/Timer" to="Uhr" method="Uhrtimer"]
[connection signal="timeout" from="TrashcanIconsEp/Timer" to="Uhr" method="_on_timer_timeout"]
